@@ -35,7 +35,10 @@ ubuntu-dev-tools (0.131) UNRELEASED; urgency=low
   [ Colin Watson ]
   * syncpackage: Fix typo.
 
- -- Stefano Rivera <stefanor@debian.org>  Thu, 08 Sep 2011 23:13:05 +0200
+  [ Benjamin Drung ]
+  * ubuntutools/requestsync: Follow PEP 8 naming conventions.
+
+ -- Benjamin Drung <bdrung@debian.org>  Sat, 10 Sep 2011 15:41:16 +0200
 
 ubuntu-dev-tools (0.130) unstable; urgency=low
 
